# iRm

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lsp/: client.rs
src/plugins/: loader.rs
src/plugins_api/src/: lib.rs
